--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A basic list for my hobbies ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "Ben Morrissey",
   "license": "ISC",
